--- a/public/assets/css/style.output.css
+++ b/public/assets/css/style.output.css
@@ -607,3 +607,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+
+/* Home */
+
+.home-title {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
