--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .page-container {
-  @apply w-full h-screen mx-auto bg-[#1abc9c] flex items-center justify-center;
+  @apply w-full h-screen mx-auto bg-[#1abc9c] flex items-center justify-center flex-col;
 }
 .form-wrapper {
   @apply bg-[#34495e] w-1/4 md:w-2/4 sm:w-full px-4 py-4 rounded-md shadow-md border-[#34495e] border-t-[1px] border-l-[1px];
@@ -41,4 +41,8 @@
 /* Home */
 .home-title {
   @apply text-white;
+}
+
+.message_field {
+  @apply bg-red-400 px-2 py-3 rounded-lg text-gray-50 font-semibold shadow-sm shadow-red-50 border-red-50 border-t border-r w-11/12 mx-4 my-4;
 }
